--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -1,9 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout 
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SearchActivity">
+    tools:context=".SearchActivity"
+    android:theme="@style/NotMainScreen"
+    android:orientation="vertical">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/header_height_size">
+        <TextView
+            style="@style/panelHeaderText"
+            android:layout_marginStart="64dp"
+            android:text="@string/search_text"
+            />
+
+        <ImageView
+            android:id="@+id/back_search_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical|start"
+            android:src="@drawable/ic_arrow"
+            android:layout_marginStart="@dimen/main_padding"/>
+
+    </FrameLayout>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="52dp">
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginVertical="8dp"
+            android:layout_marginHorizontal="@dimen/main_padding"
+            style="@style/searchBar"
+            tools:ignore="UselessParent">
+
+            <EditText
+                android:id="@+id/inputEditText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:maxLines="1"
+                android:inputType="text"
+                android:textSize="@dimen/settings_text_size"
+                android:hint="@string/search_text"
+                android:textColor="@color/black"
+                android:layout_marginStart="36dp"
+                android:layout_marginEnd="40dp"
+                style="@style/hintColor"
+                android:background="@android:color/transparent"
+                />
+
+
+            <ImageView
+                android:layout_width="@dimen/main_padding"
+                android:layout_height="@dimen/main_padding"
+                android:src="@drawable/ic_search"
+                android:layout_gravity="center_vertical|start"
+                android:layout_marginStart="12dp"
+                style="@style/searchBarIcons"
+                />
+            
+            <ImageView
+                android:id="@+id/clearIcon"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_gravity="center_vertical|end"
+                android:layout_marginEnd="8dp"
+                android:src="@drawable/ic_clear_search"
+                style="@style/searchBarIcons"
+                android:visibility="gone"/>
+
+
+
+        </FrameLayout>
+
+    </FrameLayout>
+
+
+        
+
+</LinearLayout>
