--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -4,4 +4,20 @@
         <!-- Customize your dark theme here. -->
         <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
     </style>
+
+    <style name="MainScreenTheme" parent="Theme.Material3.DayNight.NoActionBar" >
+        <item name="colorPrimary">@color/white</item>
+        <item name="colorOnPrimary">@color/black</item>
+        <item name="fontFamily">@font/yandex_display_medium</item>
+        <item name="android:background">@color/black</item>
+        <item name="textAllCaps">false</item>
+    </style>
+
+    <style name="NotMainScreen" parent="Theme.Material3.DayNight.NoActionBar">
+        <item name="colorPrimary">@color/white</item>
+        <item name="colorOnPrimary">@color/white</item>
+        <item name="android:background">@color/black</item>
+        <item name="tint">@color/white</item>
+    </style>
+    
 </resources>
