--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="main_background">#3772E7</color>
+    <color name="ic_settings">#AEAFB4</color>
+    <color name="light_gray">#E6E8EB</color>
+    <color name="gray">#AEAFB4</color>
 </resources>
