--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,5 +5,17 @@
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
-    <style name="Theme.PlaylistMaker" parent="Base.Theme.PlaylistMaker" />
+    <style name="MainScreenTheme" parent="Theme.Material3.DayNight.NoActionBar" >
+        <item name="colorPrimary">@color/white</item>
+        <item name="colorOnPrimary">@color/black</item>
+        <item name="fontFamily">@font/yandex_display_medium</item>
+        <item name="android:background">@color/main_background</item>
+        <item name="textAllCaps">false</item>
+    </style>
+    
+    <style name="NotMainScreen" parent="Theme.Material3.DayNight.NoActionBar">
+        <item name="colorPrimary">@color/black</item>
+        <item name="colorOnPrimary">@color/black</item>
+        <item name="android:background">@color/white</item>
+    </style>
 </resources>
