--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -22,6 +22,7 @@
             android:id="@+id/back_search_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            style="@style/backButtonStyle"
             android:layout_gravity="center_vertical|start"
             android:src="@drawable/ic_arrow"
             android:layout_marginStart="@dimen/main_padding"/>
@@ -75,14 +76,16 @@
                 android:src="@drawable/ic_clear_search"
                 style="@style/searchBarIcons"
                 android:visibility="gone"/>
-
-
-
         </FrameLayout>
 
     </FrameLayout>
 
-
+<androidx.recyclerview.widget.RecyclerView
+    android:id="@+id/trackRecycler"
+    android:paddingTop="@dimen/main_padding"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    />
         
 
 </LinearLayout>
