--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -49,6 +49,10 @@
         <item name="android:background">@color/white</item>
     </style>
 
+    <style name="backButtonStyle">
+        <item name="tint">@color/white</item>
+    </style>
+
     <style name="searchBar">
         <item name="cornerRadius">8dp</item>
         <item name="android:background">@drawable/radius_corners_search</item>
@@ -58,6 +62,18 @@
 
     <style name="hintColor">
         <item name="android:textColorHint">@color/black</item>
+    </style>
+
+    <style name="trackName">
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="trackArtistText">
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="trackCardIcons">
+        <item name="tint">@color/white</item>
     </style>
 
 </resources>
