--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -46,6 +46,10 @@
         <item name="android:background">@color/light_gray</item>
     </style>
 
+    <style name="backButtonStyle">
+        <item name="tint">@color/black</item>
+    </style>
+
     <style name="searchBar">
         <item name="cornerRadius">8dp</item>
         <item name="android:background">@drawable/radius_corners_search</item>
@@ -54,6 +58,18 @@
 
     <style name="hintColor">
         <item name="android:textColorHint">@color/gray</item>
+    </style>
+
+    <style name="trackName">
+        <item name="android:textColor">@color/black</item>
+    </style>
+
+    <style name="trackArtistText">
+        <item name="android:textColor">@color/gray</item>
+    </style>
+
+    <style name="trackCardIcons">
+        <item name="tint">@color/gray</item>
     </style>
 
 </resources>
