--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -76,4 +76,28 @@
         <item name="tint">@color/white</item>
     </style>
 
+    <style name="placeholderTextColor">
+        <item name="android:textColor">@color/white</item>
+        <item name="fontWeight">400</item>
+        <item name="fontFamily">@font/yandex_display_medium</item>
+    </style>
+
+    <style name="placeholderNothing">
+        <item name="android:src">@drawable/noyhing_to_find_night</item>
+    </style>
+    <style name="placeholderNoInternet">
+        <item name="android:src">@drawable/no_internet_night</item>
+    </style>
+
+    <style name="refreshButton">
+        <item name="android:textSize">@dimen/refresh_button_text</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:text">@string/refresh</item>
+        <item name="fontFamily">@font/yandex_display_medium</item>
+        <item name="fontWeight">500</item>
+        <item name="backgroundTint">@color/white</item>
+        <item name="cornerRadius">@dimen/refresh_corners</item>
+        <item name="elevation">0dp</item>
+    </style>
+
 </resources>
