--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,5 +14,7 @@
     <dimen name="header_height_size">56dp</dimen>
     <dimen name="corner_radius">16dp</dimen>
     <dimen name="song_ic_size">45dp</dimen>
-
+    <dimen name="refresh_button_text">14sp</dimen>
+    <dimen name="refresh_corners">54dp</dimen>
+    <dimen name="placeholder_margin_top">100dp</dimen>
 </resources>
