--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -81,6 +81,19 @@
         </FrameLayout>
 
     </FrameLayout>
+    <TextView
+        android:id="@+id/yourSearch"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/delete_history_top"
+        android:text="@string/searched"
+        android:fontFamily="@font/yandex_display_medium"
+        android:textSize="@dimen/you_searched"
+        android:layout_gravity="center"
+        android:textAlignment="center"
+        android:visibility="gone"
+        />
+
     <ImageView
         android:id="@+id/placeholder_image_nothing"
         android:layout_width="wrap_content"
@@ -118,16 +131,27 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="24dp"
+        android:text="@string/refresh"
         style="@style/refreshButton"
         android:visibility="gone"
         />
 
 <androidx.recyclerview.widget.RecyclerView
     android:id="@+id/trackRecycler"
-    android:paddingTop="@dimen/main_padding"
+    android:paddingTop="@dimen/recycler_view_top"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     />
-        
+
+    <Button
+        android:id="@+id/deleteHistory"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/delete_history_top"
+        android:layout_gravity="center"
+        android:text="@string/deleteHistory"
+        style="@style/refreshButton"
+        android:visibility="gone"
+        />
 
 </LinearLayout>
