--- a/app/src/main/res/layout/track_view.xml
+++ b/app/src/main/res/layout/track_view.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="61dp"
-    >
+    android:layout_height="61dp">
 
     <ImageView
         android:id="@+id/trackIcon"
@@ -14,20 +12,19 @@
         android:layout_marginStart="13dp"
         android:layout_marginTop="8dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/trackName"
+        style="@style/trackName"
         android:layout_width="250dp"
         android:layout_height="19dp"
-        style="@style/trackName"
         android:layout_marginStart="8dp"
         android:layout_marginTop="14dp"
-        android:gravity="center_vertical"
-        android:maxLines="1"
         android:ellipsize="end"
         android:fontFamily="@font/yandex_display_regular"
+        android:gravity="center_vertical"
+        android:maxLines="1"
         android:textSize="@dimen/settings_text_size"
         app:layout_constraintStart_toEndOf="@+id/trackIcon"
         app:layout_constraintTop_toTopOf="parent"
@@ -35,17 +32,17 @@
 
     <TextView
         android:id="@+id/artistName"
+        style="@style/trackArtistText"
         android:layout_width="wrap_content"
         android:layout_height="13dp"
-        style="@style/trackArtistText"
         android:layout_marginStart="8dp"
         android:layout_marginTop="1dp"
         android:layout_marginBottom="14dp"
-        android:maxLines="1"
         android:ellipsize="end"
         android:fontFamily="@font/yandex_display_regular"
-        android:textSize="@dimen/track_band_text_size"
         android:gravity="center_vertical"
+        android:maxLines="1"
+        android:textSize="@dimen/track_band_text_size"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/trackIcon"
         app:layout_constraintTop_toBottomOf="@+id/trackName"
@@ -53,9 +50,9 @@
 
     <ImageView
         android:id="@+id/dot_separator"
+        style="@style/trackCardIcons"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        style="@style/trackCardIcons"
         android:layout_marginTop="1dp"
         android:src="@drawable/dot_song_separator"
         app:layout_constraintStart_toEndOf="@+id/artistName"
@@ -63,21 +60,22 @@
 
     <TextView
         android:id="@+id/trackTime"
+        style="@style/trackArtistText"
         android:layout_width="wrap_content"
         android:layout_height="13dp"
-        style="@style/trackArtistText"
         android:layout_marginTop="1dp"
-        android:gravity="center_vertical"
+        android:ellipsize="end"
         android:fontFamily="@font/yandex_display_regular"
+        android:gravity="center_vertical"
         android:textSize="@dimen/track_band_text_size"
         app:layout_constraintStart_toEndOf="@+id/dot_separator"
         app:layout_constraintTop_toBottomOf="@+id/trackName"
         tools:text="4:20" />
 
     <ImageView
+        style="@style/trackCardIcons"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        style="@style/trackCardIcons"
         android:layout_marginTop="18dp"
         android:layout_marginEnd="12dp"
         android:src="@drawable/ic_songs_list_arrow"
