--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,6 +3,7 @@
     <dimen name="settings_text_size">16sp</dimen>
     <dimen name="primary_text_size">22sp</dimen>
     <dimen name="track_band_text_size">11sp</dimen>
+    <dimen name="you_searched">19sp</dimen>
 
     <dimen name="main_padding">16dp</dimen>
     <dimen name="ic_padding">8dp</dimen>
@@ -17,4 +18,6 @@
     <dimen name="refresh_button_text">14sp</dimen>
     <dimen name="refresh_corners">54dp</dimen>
     <dimen name="placeholder_margin_top">100dp</dimen>
+    <dimen name="delete_history_top">12dp</dimen>
+    <dimen name="recycler_view_top">8dp</dimen>
 </resources>
