--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -81,18 +80,6 @@
         </FrameLayout>
 
     </FrameLayout>
-    <TextView
-        android:id="@+id/yourSearch"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/delete_history_top"
-        android:text="@string/searched"
-        android:fontFamily="@font/yandex_display_medium"
-        android:textSize="@dimen/you_searched"
-        android:layout_gravity="center"
-        android:textAlignment="center"
-        android:visibility="gone"
-        />
 
     <ImageView
         android:id="@+id/placeholder_image_nothing"
@@ -136,22 +123,43 @@
         android:visibility="gone"
         />
 
-<androidx.recyclerview.widget.RecyclerView
-    android:id="@+id/trackRecycler"
-    android:paddingTop="@dimen/recycler_view_top"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    />
-
-    <Button
-        android:id="@+id/deleteHistory"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/delete_history_top"
-        android:layout_gravity="center"
-        android:text="@string/deleteHistory"
-        style="@style/refreshButton"
-        android:visibility="gone"
-        />
+        android:orientation="vertical"
+        >
+
+        <TextView
+            android:id="@+id/yourSearch"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/delete_history_top"
+            android:text="@string/searched"
+            android:fontFamily="@font/yandex_display_medium"
+            android:textSize="@dimen/you_searched"
+            android:layout_gravity="center"
+            android:textAlignment="center"
+            android:visibility="gone"
+            />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/trackRecycler"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:paddingTop="@dimen/recycler_view_top" />
+
+        <Button
+            android:id="@+id/deleteHistory"
+            style="@style/refreshButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal|bottom"
+            android:layout_marginTop="@dimen/delete_history_top"
+            android:text="@string/deleteHistory"
+            android:visibility="gone"
+            />
+    </LinearLayout>
+
 
 </LinearLayout>
