--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -42,21 +42,20 @@
 
             <EditText
                 android:id="@+id/inputEditText"
+                style="@style/hintColor"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:imeOptions="actionDone"
-                android:singleLine="true"
-                android:maxLines="1"
-                android:inputType="text"
-                android:textSize="@dimen/settings_text_size"
-                android:hint="@string/search_text"
-                android:textColor="@color/black"
                 android:layout_marginStart="36dp"
                 android:layout_marginEnd="40dp"
-                style="@style/hintColor"
                 android:background="@android:color/transparent"
-                />
+                android:hint="@string/search_text"
+                android:imeOptions="actionDone"
+                android:inputType="text"
+                android:maxLines="1"
+                android:singleLine="true"
+                android:textColor="@color/black"
+                android:textSize="@dimen/settings_text_size" />
 
 
             <ImageView
