--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -95,4 +95,53 @@
         <item name="elevation">0dp</item>
     </style>
 
+    <style name="ic_arrow_style">
+        <item name="srcCompat">@drawable/ic_arrow</item>
+    </style>
+    
+    <style name="playedTime">
+        <item name="fontFamily">@font/yandex_display_medium</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">@dimen/artist_name_text_size_on_player</item>
+    </style>
+    
+    <style name="mainPlayerText">
+        <item name="fontFamily">@font/yandex_display_medium</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="fontWeight">400</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:maxLines">1</item>
+    </style>
+    
+    <style name="trackAttributes">
+        <item name="fontFamily">@font/yandex_display_regular</item>
+        <item name="android:textSize">@dimen/track_attributes_text_size</item>
+        <item name="android:textColor">@color/gray</item>
+        <item name="android:fontWeight">400</item>
+    </style>
+
+    <style name="trackAttributesText">
+        <item name="fontFamily">@font/yandex_display_regular</item>
+        <item name="android:textSize">@dimen/track_attributes_text_size</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:fontWeight">400</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:textAlignment">textEnd</item>
+    </style>
+
+    <style name="playListButton">
+        <item name="srcCompat">@drawable/ic_add_to_playlist</item>
+    </style>
+
+    <style name="likeButton">
+        <item name="srcCompat">@drawable/ic_like_button</item>
+    </style>
+
+    <style name="playButton">
+        <item name="srcCompat">@drawable/ic_play_button</item>
+    </style>
+
 </resources>
