--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -81,7 +81,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="4dp"
-        style="@style/playButton"
+        android:src="@drawable/ic_play_button"
         app:layout_constraintBottom_toTopOf="@+id/playedTime"
         app:layout_constraintEnd_toStartOf="@+id/endBorder"
         app:layout_constraintStart_toStartOf="@+id/startBorder" />
