--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="ic_settings">#AEAFB4</color>
     <color name="light_gray">#E6E8EB</color>
     <color name="gray">#AEAFB4</color>
+    <color name="progress_bar">#4671DF</color>
 </resources>
