--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -27,4 +27,5 @@
     <dimen name="main_track_image_margin">24dp</dimen>
     <dimen name="track_attributes_text_size">13sp</dimen>
     <dimen name="artist_name_text_size_on_player">14sp</dimen>
+    <dimen name="progress_bar">44dp</dimen>
 </resources>
